Working happy with test data and igenome

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -37,9 +37,36 @@ process {
         ]
     }
 
-    withName: INDEX_REFERENCE {
+    withName: TABIX_BGZIP {
         publishDir = [
-            path: { "${params.outdir}/index_reference/" },
+            path: { "${params.outdir}/tabix_bgzip/" },
+            mode: 'copy',
+            enabled: false,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: TABIX_BGZIPTABIX {
+        publishDir = [
+            path: { "${params.outdir}/TABIX_BGZIPTABIX/" },
+            mode: 'copy',
+            enabled: false,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: REMOVE_CHR {
+        publishDir = [
+            path: { "${params.outdir}/remove_chr/" },
+            mode: 'copy',
+            enabled: false,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: SAMTOOLS_FAIDX {
+        publishDir = [
+            path: { "${params.outdir}/reference/" },
             mode: 'copy',
             enabled: false,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -48,7 +75,7 @@ process {
 
     withName: HAPPY_BENCHMARK {
         publishDir = [
-            path: { "${params.outdir}/happpy_results/" },
+            path: { "${params.outdir}/happy_results/" },
             mode: 'copy',
             enabled: true,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
