Added Truvari module and more info for meta

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -46,9 +46,9 @@ process {
         ]
     }
 
-    withName: TABIX_BGZIPTABIX {
+    withName: TABIX_TABIX {
         publishDir = [
-            path: { "${params.outdir}/TABIX_BGZIPTABIX/" },
+            path: { "${params.outdir}/tabix_tabix/" },
             mode: 'copy',
             enabled: false,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
