Added plotting script

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -81,4 +81,12 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
+        withName: TRUVARI_BENCHMARK {
+        publishDir = [
+            path: { "${params.outdir}/truvari_results/" },
+            mode: 'copy',
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
 }
