Expanded options for truvari and moved to results folders

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -75,7 +75,7 @@ process {
 
     withName: HAPPY_BENCHMARK {
         publishDir = [
-            path: { "${params.outdir}/happy_results/" },
+            path: { "${params.outdir}/happy/" },
             mode: 'copy',
             enabled: true,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -83,7 +83,15 @@ process {
     }
         withName: TRUVARI_BENCHMARK {
         publishDir = [
-            path: { "${params.outdir}/truvari_results/" },
+            path: { "${params.outdir}/truvari/" },
+            mode: 'copy',
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }  
+        withName: SV_PLOT {
+        publishDir = [
+            path: { "${params.outdir}/truvari/${meta.id}/" },
             mode: 'copy',
             enabled: true,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
