Add conversion module

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,10 @@ params {
     multimatch                 = false
     includebed                 = true
 
+    // Options: SV reporting
+    simple_report              = true
+    complex_report              = true
+
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
