--- a/conf/modules.config
+++ b/conf/modules.config
@@ -97,4 +97,12 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
+        withName: JL_2_CSV {
+        publishDir = [
+            path: { "${params.outdir}/truvari/${meta.id}/" },
+            mode: 'copy',
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
 }
