New plotting modules and naming of plots and tables

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -89,9 +89,9 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }  
-        withName: SV_PLOT {
+        withName: PLOT_SV_SIMPLE {
         publishDir = [
-            path: { "${params.outdir}/truvari/${meta.id}/" },
+            path: { "${params.outdir}/reports/${meta.id}/" },
             mode: 'copy',
             enabled: true,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -99,7 +99,15 @@ process {
     }
         withName: JL_2_CSV {
         publishDir = [
-            path: { "${params.outdir}/truvari/${meta.id}/" },
+            path: { "${params.outdir}/reports/${meta.id}/" },
+            mode: 'copy',
+            enabled: false,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+        withName: PLOT_SV_COMPLEX {
+        publishDir = [
+            path: { "${params.outdir}/reports/${meta.id}/" },
             mode: 'copy',
             enabled: true,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
