Finished fixing sv plotting, removed simple plotting, started editing multiqc

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -89,14 +89,6 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }  
-        withName: PLOT_SV_SIMPLE {
-        publishDir = [
-            path: { "${params.outdir}/reports/${meta.id}/" },
-            mode: 'copy',
-            enabled: true,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
         withName: JL_2_CSV {
         publishDir = [
             path: { "${params.outdir}/reports/${meta.id}/" },
@@ -105,7 +97,7 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-        withName: PLOT_SV_COMPLEX {
+        withName: PLOT_SV {
         publishDir = [
             path: { "${params.outdir}/reports/${meta.id}/" },
             mode: 'copy',
