--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     input                      = null
     skip_highconf              = false
 
-    // Options: Truvari
+    // Options: Truvari parameters
     refdist                    = '500'
     pctsim                     = '0.7'
     pctsize                    = '0.7'
@@ -33,8 +33,7 @@ params {
     includebed                 = true
 
     // Options: SV reporting
-    simple_report              = true
-    complex_report              = true
+    skip_sv_report              = false
 
     // References
     genome                     = null
