Short plotting module added with two plot output

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,8 +32,9 @@ params {
     multimatch                 = false
     includebed                 = true
 
-    // Options: SV reporting
+    // Options: Extra reporting
     skip_sv_report              = false
+    skip_short_report           = false
 
     // References
     genome                     = null
