--- a/conf/modules.config
+++ b/conf/modules.config
@@ -81,6 +81,14 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
+    withName: PLOT_SHORT {
+        publishDir = [
+            path: { "${params.outdir}/reports/${meta.id}/" },
+            mode: 'copy',
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
         withName: TRUVARI_BENCHMARK {
         publishDir = [
             path: { "${params.outdir}/truvari/" },
