Adding schema and fixing linting test

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -74,6 +74,7 @@ process {
     }
 
     withName: HAPPY_BENCHMARK {
+        ext.args = ""
         publishDir = [
             path: { "${params.outdir}/happy/" },
             mode: 'copy',
