--- a/nextflow.config
+++ b/nextflow.config
@@ -14,19 +14,19 @@ params {
     skip_highconf              = false
 
     // Options: Truvari parameters
-    refdist                    = '500'
-    pctsim                     = '0.7'
-    pctsize                    = '0.7'
-    pctovl                     = '0'
+    refdist                    = 500
+    pctsim                     = 0.7
+    pctsize                    = 0.7
+    pctovl                     = 0
     typeignore                 = false
     giabreport                 = true
     prog                       = false
-    buffer                     = '0.1'
+    buffer                     = 0.1
     use_lev                    = false
     gtcomp                     = false
-    sizemin                    = '50'
-    sizefilt                   = '30'
-    sizemax                    = '50000'
+    sizemin                    = 50
+    sizefilt                   = 30
+    sizemax                    = 50000
     passonly                   = true
     no_ref                     = false
     multimatch                 = false
