--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,7 @@ params {
     passonly                   = true
     no_ref                     = false
     multimatch                 = false
+    includebed                 = ''
 
     // Options: Extra reporting
     skip_sv_report              = false
