--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@
 
 // Global default params, used in configs
 params {
-    
+
     // Input options
     input                      = null
     skip_highconf              = false
@@ -21,7 +21,8 @@ params {
     typeignore                 = false
     giabreport                 = true
     prog                       = false
-    buffer                     = 0.1
+    minhaplen                  = 50
+    chunksize                  = 1000
     use_lev                    = false
     gtcomp                     = false
     sizemin                    = 50
