--- a/conf/test.config
+++ b/conf/test.config
@@ -24,4 +24,8 @@ params {
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
     input  = 'https://raw.githubusercontent.com/christopher-hakkaart/testdata/main/test_benchmark2.csv'
 
+
+    // Genome references
+    genome = 'GRCh37'
+
 }
